# lxp-ia

./: .gitignore  README.md  requirements.txt
data/: velib_raw.csv
lxp-ia/: README.md  mlflow.db  pyproject.toml  requirements.txt
lxp-ia/api/: agent.py  main.py  model.py
lxp-ia/conf/base/: catalog.yml  parameters.yml
lxp-ia/src/lxp_ia/: __init__.py  __main__.py  pipeline_registry.py  settings.py
lxp-ia/src/lxp_ia/datasets/: mongo_dataset.py
lxp-ia/src/lxp_ia/pipelines/supervision/: nodes.py  pipeline.py
lxp-ia/src/lxp_ia/pipelines/training/: nodes.py  pipeline.py
src/: collect.py  preprocess.py
